k8/fullstack-next/brilliantwear-fullstack-next_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brilliantwear-fullstack-next-service
  labels:
    app: brilliantwear-fullstack-next-service
spec:
  type: ClusterIP
  selector:
    app: brilliantwear-fullstack-next
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
